# figshare-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  live-api-smoke.yml  live-daily.yml
docs/: live-api-ci.md
src/: client.rs  downloads.rs  endpoint.rs  error.rs  ids.rs  lib.rs  metadata.rs  model.rs  poll.rs  query.rs  serde_util.rs  upload.rs  uploader_traits.rs  workflow.rs
tests/: live_account.rs  live_public.rs  mock_api.rs  mock_support.rs
