[package]
name = "figshare-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
description = "Rust client for Figshare article workflows, public article lookup, and file uploads/downloads."
license = "MIT"
repository = "https://github.com/LucaCappelletti94/figshare-rs"
readme = "README.md"
keywords = ["figshare", "publishing", "downloads", "science"]
categories = ["api-bindings", "science"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls"]

[dependencies]
bytes = "1.10"
client-uploader-traits = "0.1.0"
futures-core = "0.3"
futures-util = "0.3"
hex = "0.4"
md-5 = "0.11"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "stream"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
axum = "0.8"
http-body-util = "0.1"
serde_json = "1.0"
